kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restapi-nodejs-kubernetes
  labels: 
    app: restapi-nodejs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: restapi-nodejs
  template:
    metadata:
      labels:
        app: restapi-nodejs
    spec:
      containers:
        - name: kubernetes-restapi-nodejs
          image: davidmartinezb1/rest-api-node-js:latest
          ports:
            - containerPort: 8000
