kubernetes/services.yml
apiVersion: v1
kind: Service
metadata:
  name: restapi-nodejs-service
spec:
  selector:
    app: restapi-nodejs
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
