kubernetes/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restapi-nodejs-kubernetes
  labels: 
    app: restapi-nodejs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: restapi-nodejs
  template:
    metadata:
      labels:
        app: restapi-nodejs
    spec:
      containers:
        - name: kubernetes-restapi-nodejs
          image: app_restapi_nodejs:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: restapi-nodejs-service
spec:
  selector:
    app: restapi-nodejs
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restapi-nodejs-ingress
spec:
  rules:
    - host: restapinodejs.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: restapi-nodejs-service
                port:
                  number: 8000
