kubernetes/db.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mysql

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-nodejs-kubernetes
  labels: 
    app: db-nodejs
spec:
  selector:
    matchLabels:
      app: db-nodejs
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db-nodejs
    spec:
      containers:
      - image: mysql:5.7
        name: kubernetes-db-nodejs
        ports:
        - containerPort: 3306
          name: db-nodejs
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: db-nodejs-service
  namespace: mysql
spec:
  selector:
    app: db-nodejs
    version: "5.7"
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/server-alias: mysql.localhost
  labels:
    app: mysql
  name: mysql
  namespace: mysql
spec:
  rules:
  - host: mysql.localhost
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: db-nodejs-service
            port:
              number: 3306
