kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restapi-nodejs-ingress
spec:
  rules:
    - host: restapinodejs.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: restapi-nodejs-service
                port:
                  number: 80
